@@ -1,3 +1,8 @@
+2004-02-08  Stefan Petersen  <spe@stacken.kth.se>
+
+	* man/gerbv.1.in: A bunch of updates, mainly reflecting the new
+	  features.
+
 2004-02-07  Stefan Petersen  <spe@stacken.kth.se>
 
 	* src/gerbv.c: Save screen.path even when we load a project file.
